Fix "Total score" on mobile
Also fixed text-alignment of the table main-title on mobile.

--- a/scoring/static/scoring/scss/scoring-table.scss
+++ b/scoring/static/scoring/scss/scoring-table.scss
@@ -64,6 +64,7 @@ $border-table: 1px solid transparentize($color: $black, $amount: 0.8);
 
     @media only screen and (max-width: $table-desktop-breakpoint) {
         flex-direction: column;
+        align-items: center;
         button {
             margin-left: auto;
             margin-right: auto;
@@ -563,8 +564,12 @@ $padding-left: 8px;
             width: 22px;
             position: absolute;
             top: 5px;
-            left: 15px;
             z-index: 3;
+            @include responsive(left,15,375);
+        }
+
+        span.average {
+            @include responsive(right,25,400);
         }
     }
 
